# came_domotic_unofficial

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/: release-drafter.yml
.github/workflows/: build-publish.yml  build_publish_test.yml  check_code.yml  check_code_formatting.yml  check_security.yml  check_security_scheduled.yml  code-quality.yml  code-tests.yml  docs.yml  python-linters.yml  python-tests.yml  release_drafter.yml  repository_maintenance.yml  security.yml  versioning_management.yml
came_domotic_unofficial/: __init__.py  __init__OLD.py.bak  async_example.py  came_eti_domo_server.py  came_etidomo_server.py  client.py  client.py.bak  const.py  helpers.py  helpers.py.bak  models.py
came_domotic_unofficial/models/: __init__.py  digital_input.py  enums.py  feature.py  light.py  opening.py
docs/source/: api_reference.rst  conf.py  contributing.rst  getting_started.rst  index.rst  requirements.txt  roadmap.rst  security.rst  usage_examples.rst
tests/: test___init__.py  test_cli.py  test_models.py  test_models_cameentity.py  test_models_digitalinput.py  test_models_exceptions.py  test_models_light.py  test_models_opening.py  test_models_scenario.py  test_real_usage.py
tests/came_etidomo_server/: mocked_responses.py  test_internal_automatic_login.py  test_internal_ensure_login_decorator.py  test_properties.py  test_public_interface.py  test_public_methods.py  test_public_properties.py  test_special_methods.py  utils.py
tests/models/: test_cameentity.py  test_digitalinput.py  test_feature.py  test_light.py  test_opening.py  test_scenario.py
