# Copyright 2024 - GitHub user: fredericks1982

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License. 

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "came_domotic_unofficial-fredericks1982"
version = "0.5.0"
description = "Library to interact with a CAME ETI/Domo domotic server"
authors = [{ name = "fredericks1982", email = "fredericks1982@gmail.com" }]
maintainers = [{ name = "fredericks1982", email = "fredericks1982@gmail.com" }]
keywords = [
    "CAME",
    "ETI/Domo",
    "domotic",
    "home automation",
    "home assistant",
    "home-assistant",
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
    "Operating System :: OS Independent",
]
dependencies = [
    "functools",
    "datetime",
    "json",
    "logging",
    "importlib",
    "traceback",
    "requests",
]
# additional tests dependencies = [
# "pytest", "pytest-cov", "hypothesis", "unittest"]
[project.urls]
Homepage = "https://github.com/fredericks1982/came_domotic_unofficial"
Issues = "https://github.com/fredericks1982/came_domotic_unofficial/issues"
