# Copyright 2024 - GitHub user: fredericks1982

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License. 

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "came_domotic_unofficial"
dynamic = ["version"]
description = "Library to interact with a CAME ETI/Domo domotic server"
authors = [
    { name = "camedomotic-unofficial", email = "camedomotic-unofficial@gmail.com" },
]
maintainers = [
    { name = "camedomotic-unofficial", email = "camedomotic-unofficial@gmail.com" },
]
keywords = [
    "CAME",
    "ETI/Domo",
    "domotic",
    "home automation",
    "home assistant",
    "home-assistant",
]
readme = "README.rst"
license = { file = "LICENSE" }

requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Operating System :: OS Independent",
]
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/camedomotic-unofficial/came_domotic_unofficial"
Documentation = "https://came_domotic_unofficial.readthedocs.io/en/latest/"
Issues = "https://github.com/camedomotic-unofficial/came_domotic_unofficial"
Repository = "https://github.com/camedomotic-unofficial/came_domotic_unofficial.git"


[tool.setuptools_scm]
version_file = "came_domotic_unofficial/_version.py"

[tool.pytest.ini_options]
addopts = "--timeout=10"
# addopts = "--timeout=10 --cov=came_domotic_unofficial --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
omit = [
    "came_domotic_unofficial/_version.py", # Ignore: it is autogenerated by setuptools_scm
]
